# ComfyUI_Layers_Utility

./: README.md  __init__.py  layer_system_final.js  layer_system_final.py  pyproject.toml
WF-Example/: Nunchaku-qwen-edit-flux+layers-system.json  final-layers-utilityV10.json  final-layers-utilityV6.json  final-layers-utilityV8.json  final-layers-utilityV9.json  layers-system.json  layers-systemv2.json  layers-systemv3.json
js/: brush_manager.js  layer_system_final.js  magic_wand_manager.js  mask_manager.js  mask_painter_manager.js  removebg.js  toolbar.js
