[project]
name = "comfyui-Layers-Utility"
description = "Advanced Block LoRA merging node for ComfyUI (allows selective LoRA block merging)"
version = "1.0.4"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Layers_Utility"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Layers System"
Icon = ""
