[project]
name = "ComfyUI-Layers-Utility"
description = "This custom node for ComfyUI provides a powerful and flexible dynamic layering system, similar to what you would find in image editing software like Photoshop."
version = "3.1.1"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Layers_Utility"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Layers System"
Icon = ""













